Changed to serenity

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,7 @@ version = "0.1.0"
 authors = ["buffet <niclas@countingsort.com>"]
 
 [dependencies]
-discord = "0.8"
+env_logger = "0.6.0"
+kankyo = "0.2.0"
+log = "0.4.0"
+serenity = { version = "0.5.11", features = ["cache", "framework", "standard_framework"] }
